Finished rebranding and January 2018 menu

--- a/themes/dinnerdelights/layout/_partial/joinaparty.ejs
+++ b/themes/dinnerdelights/layout/_partial/joinaparty.ejs
@@ -1,15 +1,13 @@
-<div id="join">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-                <div class="section-heading">
-                    <h2>Join a party</h2>
-                </div>
-            </div>
-        </div>
-    </div>
+<div id="join" class="section">
     <section class="join-container">
         <div class="container join-content">
+            <div class="row">
+                <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+                    <div class="section-heading">
+                        <h2>Join a party</h2>
+                    </div>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-xs-12 text-center">
                     <p>
