--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -1,125 +1,104 @@
-<div id="menu">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-                <div class="section-heading">
-                    <h2>Menu</h2>
-                    <p>December 2017</p>
-                </div>
-            </div>
-        </div>
-    </div>
+<div id="menu" class="section">
     <section class="menu-container">
         <div class="container menu-content">
+            <div class="row">
+                <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+                    <div class="section-heading">
+                        <h2>Menu</h2>
+                        <h3 class="subheading">January 2018</p>
+                    </div>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <ul>
                         <li>
-                            <strong>Beef Stew</strong>
+                            <strong>Smothered Chile Colorado Burritos</strong>
                             <ul>
-                                <li>The ultimate winter comfort meal! A delicious, veggie loaded stew slow cooked all day. Comes
-                                    with fresh baked bread. Your house will smell amazing for days! (Slow cooker and oven)</li>
+                                <li>A spicy way to start your year! Seasoned beef and beans fill flour tortillas. Top with cheese
+                                    and you have a great meal. Can be made vegetarian. (Slow cooker)</li>
                             </ul>
                         </li>
 
                         <li>
-                            <strong>Spicy Apple Glazed Meatballs</strong>
+                            <strong>Ethan’s Noodles (aka Beef Satay Noodles)</strong>
                             <ul>
-                                <li>A sticky, sweet glaze to top juicy meatballs. Comes with rice and veggies. (Slow cooker)</li>
+                                <li>Rice noodles, ground beef and veggies tossed in a peanut sauce. This is my son’s favorite
+                                    meal. Can be made vegetarian. (Stovetop)</li>
                             </ul>
                         </li>
 
                         <li>
-                            <strong>Texas Style Brisket</strong>
+                            <strong>Sweet and Sour BBQ Meatballs</strong>
                             <ul>
-                                <li>Brisket cooked low and slow until it falls apart. Makes an amazing sandwich or baked potato
-                                    topping! Comes with rolls and veggies. (Slow cooker)</li>
+                                <li>A fun twist on the usual sweet and sour meal. Juicy meatballs are slow cooked with pineapple
+                                    and veggies and served over rice. (Slow cooker)</li>
                             </ul>
                         </li>
 
                         <li>
-                            <strong>Chicken Taco Soup</strong>
+                            <strong>Chicken and Noodles</strong>
                             <ul>
-                                <li>A flavorful, veggie loaded soup. It is my go-to for a filling meal in cold weather. Comes
-                                    with cheese. (Slow cooker)</li>
+                                <li>A comfort food favorite! Chicken slow cooked in seasoned broth. Add egg noodles and corn
+                                    and you have a great meal for a chilly day. (Slow cooker)</li>
                             </ul>
                         </li>
 
                         <li>
-                            <strong>Honey Sriracha Chicken</strong>
+                            <strong>Honey Garlic Chicken</strong>
                             <ul>
-                                <li>A little spice to go with a little sweet! This will be your new favorite take-out substitute.
-                                    Comes with rice and veggies. (Slow cooker)</li>
+                                <li>A quick, flavorful meal for a busy night. Diced chicken is topped with a sticky sweet sauce
+                                    and served with rice and veggies. (Stovetop)</li>
                             </ul>
                         </li>
 
                         <li>
-                            <strong>Jamaican Jerk Chicken</strong>
+                            <strong>Southwestern Chicken with Cilantro Lime Rice</strong>
                             <ul>
-                                <li>A little taste of the island to hold you over during the cold of winter! Chicken and veggies
-                                    served over rice. (Slow cooker)</li>
+                                <li>Seasoned chicken and veggies served over flavorful rice. Can be made vegetarian. (Stovetop)</li>
                             </ul>
                         </li>
 
                         <li>
-                            <strong>Maple Dijon Chicken</strong>
+                            <strong>Cilantro Lime Pork</strong>
                             <ul>
-                                <li>Delicious baked chicken and veggies. Comes with veggies. (Oven)</li>
+                                <li>I love pork and citrus together. This time we throw in some cilantro and cumin and at the
+                                    end of a long day, you will have amazing tacos ready to eat. Comes with corn tortillas
+                                    and cheese. (Slow cooker)</li>
                             </ul>
                         </li>
 
                         <li>
-                            <strong>Cranberry Pork Roast</strong>
+                            <strong>Peach Bourbon Pork</strong>
                             <ul>
-                                <li>Sweet, juicy pork roast slow cooked. It makes amazing sandwiches! Comes with rolls and veggies.
-                                    (Slow cooker)</li>
+                                <li>Juicy pork slow cooked all day. Served with veggies and rolls. (Slow cooker)</li>
                             </ul>
                         </li>
 
                         <li>
-                            <strong>Sausage with Onions and Peppers</strong>
+                            <strong>Hamballs</strong>
                             <ul>
-                                <li>An update to an old standby. Italian sausages cooked all day with veggies. Served over pasta.
-                                    (Slow cooker)</li>
+                                <li>My great-aunt’s hamballs brought to you! Nothing is better than an old family recipe and
+                                    I am so excited to share it with you! Comes with veggies. (Slow cooker)</li>
                             </ul>
                         </li>
 
                         <li>
-                            <strong>Parmesan Honey Pork Roast</strong>
+                            <strong>Black Bean Soup</strong>
                             <ul>
-                                <li>Italian herbs and cheese slow cooked until the roast falls apart. Comes with veggies. (Slow
-                                    cooker)</li>
+                                <li>Veggie overload! Black beans slow cooked with all the veggies. It is the perfect bowl of
+                                    soup for a cold night. Vegetarian. (Slow cooker)</li>
                             </ul>
                         </li>
 
                     </ul>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                    <h3 class="text-center">Gifts in a Jar are back!</h3>
-                    <p>
-                        Through December you can make
-                        <strong>Hot Cocoa Mix, Pancake Mix, or Monster Cookies</strong>. They are perfect for anyone you need to
-                        give a quick, delicious handmade gift! Teachers, friends, service providers, or just because!
-                    </p>
-                    <p class="text-center">
-                        Order your jars today!
-                    </p>
+            <div class="row menu-btn-container">
+                <div class="col-sm-4 col-sm-offset-4 text-center">
+                    <a href="/Menu-Archive/" class="btn btn-default btn-block">Previous Menus</a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2 text-center">
-                    <a href="http://buytickets.at/dinnerdelights/130152" class="btn btn-buy-jars" target="_blank">ORDER JARS</a>
-                </div>
-            </div>            
         </div>
     </section>
-    <div class="container menu-btn-container">
-        <div class="row">
-            <div class="col-sm-4 col-sm-offset-4 text-center">
-                <a href="/Menu-Archive/" class="btn btn-default btn-block">Previous Menus</a>
-            </div>
-        </div>
-    </div>
 </div>
