--- a/themes/dinnerdelights/source/css/bootstrap.css
+++ b/themes/dinnerdelights/source/css/bootstrap.css
@@ -1189,7 +1189,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: 'typnic_titling';
+  font-family: 'wanderlust_lettersregular';
   font-weight: 500;
   line-height: 1.1;
   color: 5 C306B;
