--- a/themes/dinnerdelights/layout/_partial/services.ejs
+++ b/themes/dinnerdelights/layout/_partial/services.ejs
@@ -1,16 +1,14 @@
 <!--services-->
-<div id="services">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-md-6 col-md-offset-3">
-                <div class="section-heading">
-                    <h2>Services</h2>
-                </div>
-            </div>
-        </div>
-    </div>
+<div id="services" class="section">
     <section class="services-style-one">
         <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12 col-md-6 col-md-offset-3">
+                    <div class="section-heading">
+                        <h2>Services</h2>
+                    </div>
+                </div>
+            </div>
             <div class="row clearfix">
                 <div class="col-sm-10 col-sm-offset-1 service-container">
                     <div class="service-block">
