Added Instagram feed photos

--- a/themes/dinnerdelights/layout/_partial/inline-scripts.ejs
+++ b/themes/dinnerdelights/layout/_partial/inline-scripts.ejs
@@ -3,4 +3,5 @@
 <%- js('js/bootstrap.min') %>
 <%- js('js/jquery.flexslider') %>
 <%- js('js/jquery.inview') %>
+<%- js('js/lodash') %>
 <%- js('js/script') %>
