--- a/themes/dinnerdelights/layout/index.ejs
+++ b/themes/dinnerdelights/layout/index.ejs
@@ -2,8 +2,8 @@
 <%- partial('_partial/home') %>
 <%- partial('_partial/about') %>
 <%- partial('_partial/services') %>
+<%- partial('_partial/photos') %>
 <%- partial('_partial/menu') %>
 <%- partial('_partial/joinaparty') %>
-<%- partial('_partial/faq') %>
 <%- partial('_partial/contact') %>
 <%- partial('_partial/footer', null, {cache: !config.relative_link}) %>
