--- a/themes/dinnerdelights/layout/_partial/contact.ejs
+++ b/themes/dinnerdelights/layout/_partial/contact.ejs
@@ -34,6 +34,13 @@
                             </a>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <a href="https://www.instagram.com/mydinnerdelights/">
+                                <i class="fa fa-instagram" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;instagram.com/MyDinnerDelights/
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <!-- Begin MailChimp Signup Form -->
