--- a/themes/dinnerdelights/layout/_partial/masthead.ejs
+++ b/themes/dinnerdelights/layout/_partial/masthead.ejs
@@ -19,6 +19,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="#home">home</a></li>
                             <li><a href="#about">about</a></li>
+                            <li><a href="#photos">photos</a></li>
                             <li><a href="#services">services</a></li>
                             <li><a href="#menu">menu</a></li>
                             <li><a href="#join">join a party</a></li>
