Updated MailChimp signup form & minor styling fixes

--- a/themes/dinnerdelights/layout/_partial/contact.ejs
+++ b/themes/dinnerdelights/layout/_partial/contact.ejs
@@ -80,7 +80,7 @@
                                     <input type="text" name="b_5177ad8cdfc5f7ac669b7fde5_552fbf4c81" tabindex="-1" value="">
                                 </div>
                                 <div class="clear">
-                                    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                                    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary">
                                 </div>
                             </div>
                         </form>
