--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -5,7 +5,7 @@
                 <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                     <div class="section-heading">
                         <h2>Menu</h2>
-                        <h3 class="subheading">January 2018</p>
+                        <h3 class="subheading">February 2018</p>
                     </div>
                 </div>
             </div>
@@ -13,81 +13,83 @@
                 <div class="col-md-8 col-md-offset-2">
                     <ul>
                         <li>
-                            <strong>Smothered Chile Colorado Burritos</strong>
+                            <strong>Monterey Chicken</strong>
                             <ul>
-                                <li>A spicy way to start your year! Seasoned beef and beans fill flour tortillas. Top with cheese
-                                    and you have a great meal. Can be made vegetarian. (Slow cooker)</li>
+                                <li>Chicken breasts topped with a sweet and tangy homemade BBQ sauce, cheddar and bacon. Comes
+                                    with veggies. (Oven)</li>
                             </ul>
                         </li>
 
                         <li>
-                            <strong>Ethan’s Noodles (aka Beef Satay Noodles)</strong>
+                            <strong>Brown Sugar Bourbon Chicken</strong>
                             <ul>
-                                <li>Rice noodles, ground beef and veggies tossed in a peanut sauce. This is my son’s favorite
-                                    meal. Can be made vegetarian. (Stovetop)</li>
+                                <li>A great meal for a busy night. Baked chicken is topped with a sweet sauce and served with
+                                    rice and veggies. (Oven)</li>
                             </ul>
                         </li>
 
                         <li>
-                            <strong>Sweet and Sour BBQ Meatballs</strong>
+                            <strong>Creole Chicken and Sausage</strong>
                             <ul>
-                                <li>A fun twist on the usual sweet and sour meal. Juicy meatballs are slow cooked with pineapple
-                                    and veggies and served over rice. (Slow cooker)</li>
+                                <li>Celebrate Mardi Gras in Iowa! A Cajun inspired dish filled with veggies, chicken and sausage.
+                                    Served over rice. (Slow cooker)</li>
                             </ul>
                         </li>
 
                         <li>
-                            <strong>Chicken and Noodles</strong>
+                            <strong>Mozzarella Stuffed Turkey Pesto Meatballs</strong>
                             <ul>
-                                <li>A comfort food favorite! Chicken slow cooked in seasoned broth. Add egg noodles and corn
-                                    and you have a great meal for a chilly day. (Slow cooker)</li>
+                                <li>Back by popular demand! Turkey pesto meatballs filled with mozzarella and baked to perfection.
+                                    Served with Awesome bread and veggies.</li>
                             </ul>
                         </li>
 
                         <li>
-                            <strong>Honey Garlic Chicken</strong>
+                            <strong>Roasted Tomato Soup</strong>
                             <ul>
-                                <li>A quick, flavorful meal for a busy night. Diced chicken is topped with a sticky sweet sauce
-                                    and served with rice and veggies. (Stovetop)</li>
+                                <li>My favorite tomato soup! Tomatoes, onions and garlic roasted until caramelized, then blended
+                                    with a little cream for just the right creamy touch. You will need a blender, food processor,
+                                    or immersion blender. (Oven)</li>
                             </ul>
                         </li>
 
                         <li>
-                            <strong>Southwestern Chicken with Cilantro Lime Rice</strong>
+                            <strong>Hot Italian Sandwiches</strong>
                             <ul>
-                                <li>Seasoned chicken and veggies served over flavorful rice. Can be made vegetarian. (Stovetop)</li>
+                                <li>A great pizza inspired sandwich! A trio of meats and duo of cheeses are baked until melty
+                                    good. Comes with veggies. (Oven)</li>
                             </ul>
                         </li>
 
                         <li>
-                            <strong>Cilantro Lime Pork</strong>
+                            <strong>Honey Soy Pork</strong>
                             <ul>
-                                <li>I love pork and citrus together. This time we throw in some cilantro and cumin and at the
-                                    end of a long day, you will have amazing tacos ready to eat. Comes with corn tortillas
-                                    and cheese. (Slow cooker)</li>
+                                <li>Fall apart pork loin marinated in honey, soy, and seasonings. Served with buttered noodles
+                                    and veggies. (Crockpot)</li>
                             </ul>
                         </li>
 
                         <li>
-                            <strong>Peach Bourbon Pork</strong>
+                            <strong>Bacon Cheddar Turnovers and Scrambled Eggs</strong>
                             <ul>
-                                <li>Juicy pork slow cooked all day. Served with veggies and rolls. (Slow cooker)</li>
+                                <li>Puff pastry is stuffed with bacon and cheddar then baked until golden brown. Serve it with
+                                    veggie loaded scrambled eggs. The perfect breakfast for dinner choice! (Oven)</li>
                             </ul>
                         </li>
 
                         <li>
-                            <strong>Hamballs</strong>
+                            <strong>Beef and Noodles</strong>
                             <ul>
-                                <li>My great-aunt’s hamballs brought to you! Nothing is better than an old family recipe and
-                                    I am so excited to share it with you! Comes with veggies. (Slow cooker)</li>
+                                <li>Egg noodles are topped with beef that is slow cooked in a savory sauce. Perfect for a cold
+                                    night! (Slow cooker)</li>
                             </ul>
                         </li>
 
                         <li>
-                            <strong>Black Bean Soup</strong>
+                            <strong>Taco Stuffed Peppers</strong>
                             <ul>
-                                <li>Veggie overload! Black beans slow cooked with all the veggies. It is the perfect bowl of
-                                    soup for a cold night. Vegetarian. (Slow cooker)</li>
+                                <li>Seasoned beef and veggies stuff a pepper. Top with cheese and you have a great way to have
+                                    your veggies and tacos all in one bite! (Oven)</li>
                             </ul>
                         </li>
 
