--- a/themes/dinnerdelights/layout/_partial/contact.ejs
+++ b/themes/dinnerdelights/layout/_partial/contact.ejs
@@ -1,18 +1,14 @@
 <!--contact form-->
-<div id="contact">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-                <div class="section-heading">
-                    <h2>Contact</h2>
-                </div>
-            </div>
-        </div>
-    </div>
+<div id="contact" class="section">
     <section class="contact-container">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h2>Contact</h2>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="col-xs-12">
                             <a href="mailto:andrea@mydinnerdelights.com">
@@ -30,14 +26,14 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <a href="https://www.facebook.com/MyDinnerDelights/">
-                                <i class="fa fa-facebook-official" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;facebook.com/MyDinnerDelights/
+                                <i class="fa fa-facebook-official" aria-hidden="true"></i>&nbsp;/MyDinnerDelights
                             </a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-12">
                             <a href="https://www.instagram.com/mydinnerdelights/">
-                                <i class="fa fa-instagram" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;instagram.com/MyDinnerDelights/
+                                <i class="fa fa-instagram" aria-hidden="true"></i>&nbsp;/MyDinnerDelights
                             </a>
                         </div>
                     </div>
