--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -10,87 +10,95 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                    <ul>
+                <div class="col-md-10 col-md-offset-1">
+                    <ul class="menu-list">
+
                         <li>
-                            <strong>Monterey Chicken</strong>
-                            <ul>
-                                <li>Chicken breasts topped with a sweet and tangy homemade BBQ sauce, cheddar and bacon. Comes
-                                    with veggies. (Oven)</li>
-                            </ul>
+                            <img src="/Menu-Images/2018-02/web_Brown Sugar bourbon Chicken.JPG" alt="Brown Sugar Bourbon Chicken" class="menu-image" />
+                            <div>
+                                <h4>Brown Sugar Bourbon Chicken</h4>
+                                <p>A great meal for a busy night. Baked chicken is topped with a sweet sauce and served
+                                        with rice and veggies. (Oven)</p>
+                            </div>
                         </li>
 
                         <li>
-                            <strong>Brown Sugar Bourbon Chicken</strong>
-                            <ul>
-                                <li>A great meal for a busy night. Baked chicken is topped with a sweet sauce and served with
-                                    rice and veggies. (Oven)</li>
-                            </ul>
+                            <img src="/Menu-Images/2018-02/web_Creole Chicken and Sausage.JPG" alt="Creole Chicken and Sausage" class="menu-image" />
+                            <div>
+                                <h4>Creole Chicken and Sausage</h4>
+                                <p>Celebrate Mardi Gras in Iowa! A Cajun inspired dish filled with veggies, chicken and
+                                        sausage. Served over rice. (Slow cooker)</p>
+                            </div>
                         </li>
 
                         <li>
-                            <strong>Creole Chicken and Sausage</strong>
-                            <ul>
-                                <li>Celebrate Mardi Gras in Iowa! A Cajun inspired dish filled with veggies, chicken and sausage.
-                                    Served over rice. (Slow cooker)</li>
-                            </ul>
+                            <img src="/Menu-Images/2018-02/web_Roasted Tomato Soup.JPG" alt="Roasted Tomato Soup" class="menu-image" />
+                            <div>
+                                <h4>Roasted Tomato Soup</h4>
+                                <p>My favorite tomato soup! Tomatoes, onions and garlic roasted until caramelized, then
+                                        blended with a little cream for just the right creamy touch. You will need a blender,
+                                        food processor, or immersion blender. (Oven)</p>
+                            </div>
                         </li>
 
                         <li>
-                            <strong>Mozzarella Stuffed Turkey Pesto Meatballs</strong>
-                            <ul>
-                                <li>Back by popular demand! Turkey pesto meatballs filled with mozzarella and baked to perfection.
-                                    Served with Awesome bread and veggies.</li>
-                            </ul>
+                            <img src="/Menu-Images/2018-02/web_Hot Italian Sandwich.JPG" alt="Hot Italian Sandwich" class="menu-image" />
+                            <div>
+                                <h4>Hot Italian Sandwiches</h4>
+                                <p>A great pizza inspired sandwich! A trio of meats and duo of cheeses are baked until melty
+                                        good. Comes with veggies. (Oven)</p>
+                            </div>
                         </li>
 
                         <li>
-                            <strong>Roasted Tomato Soup</strong>
-                            <ul>
-                                <li>My favorite tomato soup! Tomatoes, onions and garlic roasted until caramelized, then blended
-                                    with a little cream for just the right creamy touch. You will need a blender, food processor,
-                                    or immersion blender. (Oven)</li>
-                            </ul>
+                            <img src="/Menu-Images/2018-02/web_Honey Soy Pork.JPG" alt="Honey Soy Pork" class="menu-image" />
+                            <div>
+                                <h4>Honey Soy Pork</h4>
+                                <p>Fall apart pork loin marinated in honey, soy, and seasonings. Served with buttered noodles
+                                        and veggies. (Crockpot)</p>
+                            </div>
                         </li>
 
                         <li>
-                            <strong>Hot Italian Sandwiches</strong>
-                            <ul>
-                                <li>A great pizza inspired sandwich! A trio of meats and duo of cheeses are baked until melty
-                                    good. Comes with veggies. (Oven)</li>
-                            </ul>
+                            <img src="/Menu-Images/2018-02/web_Bacon Cheddar Turnovers.JPG" alt="Bacon Cheddar Turnovers" class="menu-image" />
+                            <div>
+                                <h4>Bacon Cheddar Turnovers and Scrambled Eggs</h4>
+                                <p>Puff pastry is stuffed with bacon and cheddar then baked until golden brown. Serve it
+                                        with veggie loaded scrambled eggs. The perfect breakfast for dinner choice! (Oven)</p>
+                            </div>
                         </li>
 
                         <li>
-                            <strong>Honey Soy Pork</strong>
-                            <ul>
-                                <li>Fall apart pork loin marinated in honey, soy, and seasonings. Served with buttered noodles
-                                    and veggies. (Crockpot)</li>
-                            </ul>
+                            <img src="/Menu-Images/2018-02/web_Taco Stuffed Peppers.JPG" alt="Taco Stuffed Peppers" class="menu-image" />
+                            <div>
+                                <h4>Taco Stuffed Peppers</h4>
+                                <p>Seasoned beef and veggies stuff a pepper. Top with cheese and you have a great way to
+                                        have your veggies and tacos all in one bite! (Oven)</p>
+                            </div>
                         </li>
 
                         <li>
-                            <strong>Bacon Cheddar Turnovers and Scrambled Eggs</strong>
-                            <ul>
-                                <li>Puff pastry is stuffed with bacon and cheddar then baked until golden brown. Serve it with
-                                    veggie loaded scrambled eggs. The perfect breakfast for dinner choice! (Oven)</li>
-                            </ul>
+                            <div>
+                                <h4>Monterey Chicken</h4>
+                                <p>Chicken breasts topped with a sweet and tangy homemade BBQ sauce, cheddar and bacon.
+                                        Comes with veggies. (Oven)</p>
+                            </div>
                         </li>
 
                         <li>
-                            <strong>Beef and Noodles</strong>
-                            <ul>
-                                <li>Egg noodles are topped with beef that is slow cooked in a savory sauce. Perfect for a cold
-                                    night! (Slow cooker)</li>
-                            </ul>
+                            <div>
+                                <h4>Mozzarella Stuffed Turkey Pesto Meatballs</h4>
+                                <p>Back by popular demand! Turkey pesto meatballs filled with mozzarella and baked to perfection.
+                                        Served with Awesome bread and veggies.</p>
+                            </div>
                         </li>
 
                         <li>
-                            <strong>Taco Stuffed Peppers</strong>
-                            <ul>
-                                <li>Seasoned beef and veggies stuff a pepper. Top with cheese and you have a great way to have
-                                    your veggies and tacos all in one bite! (Oven)</li>
-                            </ul>
+                            <div>
+                                <h4>Beef and Noodles</h4>
+                                <p>Egg noodles are topped with beef that is slow cooked in a savory sauce. Perfect for a
+                                        cold night! (Slow cooker)</p>
+                            </div>
                         </li>
 
                     </ul>
